# dr-simulator

./: .bumpversion.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_docs.yml  ci.yml  codecov_action  dev.yml  release.yml
docs/: api.md  installation.md  usage.md
dr_simulator/: __init__.py
tests/: __init__.py  test_dr_simulator.py
