[tool]
[tool.poetry]
name = "dr-simulator"
version = "0.1.0"
homepage = "https://github.com/ThyanRevolter/dr-simulator"
description = "Demand Response simulator for incentive based DR programs."
authors = ["Adhithyan Sakthivelu <adhiths@stanford.edu>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "dr_simulator" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

black  = "^24.2.0"
isort  = "^5.13.2"
flake8  = "^7.0.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.8.0"
pytest  = { version = "^6.2.4", optional = true}
pytest-cov  = { version = "^2.12.0", optional = true}
tox  = "^4.14.0"
virtualenv  = { version = "^20.2.2", optional = true}
pip  = { version = "^20.3.1", optional = true}
mkdocs  = "^1.5.3"
mkdocs-include-markdown-plugin  = "^6.0.4"
mkdocs-material  = "^9.5.12"
mkdocstrings  = "^0.24.1"
mkdocs-material-extensions  = "^1.3.1"
twine  = { version = "^3.3.0", optional = true}
mkdocs-autorefs = "^1.0.1"
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox",  "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
